--- a/settings/project.json
+++ b/settings/project.json
@@ -33,5 +33,6 @@
       "enable": false
     }
   },
-  "start-scene": "13c01d44-b942-470a-a1f2-c572a6c204fd"
+  "start-scene": "13c01d44-b942-470a-a1f2-c572a6c204fd",
+  "last-module-event-record-time": 1621581175655
 }
